tests/ui/linked_pool_chain_outlives_pool.stderr
error[E0597]: `pool` does not live long enough
 --> tests/ui/linked_pool_chain_outlives_pool.rs:7:17
  |
6 |         let pool = Box::pin(LinkedPool::with_capacity(1));
  |             ---- binding `pool` declared here
7 |         chain = pool.as_ref().chain();
  |                 ^^^^ borrowed value does not live long enough
8 |     }
  |     - `pool` dropped here while still borrowed
9 |     drop(chain);
  |          ----- borrow later used here
